force-app/src/objects/TR1__Vacancy_D2D__c.object
<CustomObject>
    <fields>
        <fullName>TR1__CR_Id__c</fullName>
        <label>CR Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Candidate_Assigned__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Candidate Assigned</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>VacancyD2Ds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Candidate_Availability__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Candidate Availability</label>
        <referenceTo>TR1__Candidate_Availability__c</referenceTo>
        <relationshipLabel>Vacancy Schedules</relationshipLabel>
        <relationshipName>Vacancy_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Closed_Reason__c</fullName>
        <formula>TEXT(TR1__Vacancy__r.TR1__Closed_Reason__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Closing_Report_Schedule_Secondary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Closing Report Schedule Secondary</label>
        <referenceTo>TR1__Closing_Report_Schedule__c</referenceTo>
        <relationshipLabel>Vacancy Schedules (Closing Report Schedule Secondary)</relationshipLabel>
        <relationshipName>VacancySchedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Closing_Report_Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Closing Report Schedule</label>
        <referenceTo>TR1__Closing_Report_Schedule__c</referenceTo>
        <relationshipLabel>Vacancy Schedules</relationshipLabel>
        <relationshipName>VacancySchedules1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Contact_Name__c</fullName>
        <formula>TR1__Vacancy__r.TR1__Contact__r.FirstName+&apos; &apos;+ TR1__Vacancy__r.TR1__Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__End_Date_Time__c</fullName>
        <label>End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TR1__Job_Account_Parent__c</fullName>
        <formula>TR1__Vacancy__r.TR1__Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Account Parent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Job_s_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job&apos;s Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vacancy Schedules</relationshipLabel>
        <relationshipName>Vacancy_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Number_of_Openings__c</fullName>
        <formula>TEXT(TR1__Vacancy__r.TR1__Number_of_Openings__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Openings</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Shift__c</fullName>
        <label>Shift</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full Day</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Start_Date_Time__c</fullName>
        <label>Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TR1__State_Area__c</fullName>
        <formula>TEXT(TR1__Vacancy__r.TR1__State_Area__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>Booked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Sub_Status__c</fullName>
        <label>Sub Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Confirmed</fullName>
                    <color>#FF6600</color>
                    <label>Confirmed</label>
                </value>
                <value>
                    <fullName>Tentative</fullName>
                    <color>#FFCC33</color>
                    <label>Tentative</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Vacancy_Date__c</fullName>
        <inlineHelpText>Date for which this vacancy is applicable</inlineHelpText>
        <label>Vacancy Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Vacancy_Name__c</fullName>
        <formula>TR1__Vacancy__r.Name</formula>
        <label>Vacancy Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Vacancy_Number__c</fullName>
        <formula>TR1__Vacancy__r.TR1__Job_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vacancy Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Vacancy__c</fullName>
        <label>Job</label>
        <referenceTo>TR1__Job__c</referenceTo>
        <relationshipLabel>Vacancy Schedules</relationshipLabel>
        <relationshipName>VacancyD2Ds</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TR1__Work_Shift_Location__c</fullName>
        <label>Work Shift Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>INDIA</fullName>
                </value>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Work_Shift_Location_lkId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Shift Location</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.ParentId</field>
                <operation>equals</operation>
                <valueField>$Source.TR1__Job_s_Account__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vacancy Schedules (Work Shit Location)</relationshipLabel>
        <relationshipName>Vacancy_Schedules1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__isChecked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isChecked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__isCreatedFromCR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isCreatedFromCR</label>
        <type>Checkbox</type>
    </fields>
    <label>Vacancy Schedule</label>
    <listViews>
        <fullName>TR1__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>D2D-{000000}</displayFormat>
        <label>D2D Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vacancy Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>TR1__EndDate_Time_Not_LessThan_StartDate_Time</fullName>
        <active>false</active>
        <description>The End Date Time should not be less than Start Date Time</description>
        <errorConditionFormula>AND(
 (TR1__End_Date_Time__c &lt;= TR1__Start_Date_Time__c), 
 OR(ISCHANGED(TR1__End_Date_Time__c ),ISCHANGED(TR1__Start_Date_Time__c),ISNEW() )
)</errorConditionFormula>
        <errorDisplayField>TR1__End_Date_Time__c</errorDisplayField>
        <errorMessage>End Date time should be greater than Start Date time</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TR1__Start_Date_Time_Not_Past_Value</fullName>
        <active>false</active>
        <description>Start Date should not be Past Date</description>
        <errorConditionFormula>AND(OR( ISNEW() ,ISCHANGED(TR1__Start_Date_Time__c) ), DATEVALUE( TR1__Start_Date_Time__c )   &lt;  TODAY())</errorConditionFormula>
        <errorDisplayField>TR1__Start_Date_Time__c</errorDisplayField>
        <errorMessage>Start Date should Not Be Past Date</errorMessage>
    </validationRules>
</CustomObject>